@@ -614,6 +614,7 @@ wxMSW:
 - Fix font created using wxFont(wxFontInfo()) ctor.
 - Fix wxFileName::GetShortcutTarget() in console applications.
 - Fix wxFileName::MakeRelativeTo() for shortcut files (gafatoa).
+- Fix height of initially empty wxBitmapComboBox (Artur Wieczorek).
 
 
 3.0.1: (released 2014-06-15)
